--- a/styles/less/_header-menu.less
+++ b/styles/less/_header-menu.less
@@ -1,3 +1,15 @@
+@keyframes dropDown {
+  from {
+    margin-top: -2%;
+    opacity: 0;
+  }
+
+  to {
+    margin-top: 0;
+    opacity: 1;
+  }
+}
+
 .header {
   min-height: 100px;
   display: flex;
@@ -66,9 +78,12 @@
   }
 }
 
-
-.header-right img {
+.cartIcon {
   margin-right: 26px;
+}
+
+.cart {
+  display: none;
 }
 
 .header-search {
@@ -140,6 +155,202 @@
   -webkit-transition: opacity 0.4s linear;
   -o-transition: opacity 0.4s linear;
   transition: opacity 0.4s linear;
+  & .browse-menu-box {
+    display: block;
+  }
+}
+
+.browse-menu-box {
+  width: 225px;
+  background-color: #ffffff;
+  position: absolute;
+  top: 7%;
+  left: 25%;
+  padding: 15px;
+  border: 0.5px solid #dbdbdb;
+  border-radius: 5px;
+  display: none;
+  -webkit-box-shadow: -6px 7px 16px -4px rgba(148,148,148,1);
+  -moz-box-shadow: -6px 7px 16px -4px rgba(148,148,148,1);
+  box-shadow: -6px 7px 16px -4px rgba(148,148,148,1);
+}
+
+.browse-menu-header {
+  color: #232323;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.35px;
+  border-bottom: 1px solid #e8e8e8;
+  margin-bottom: 5px;
+  padding-bottom: 5px;
+}
+
+.browse-menu-list {
+  padding: 0;
+  margin: 0 0 20px 0;
+  li {
+    list-style-type: none;
+    a {
+      color: #4f4f4f;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 28px;
+      letter-spacing: 0.35px;
+      text-transform: capitalize;
+      margin-left: 10px;
+    }
+    & :hover {
+      color: @mainColor;
+    }
+  }
+}
+
+.cartMenuBox {
+  flex-direction: column;
+  justify-content: space-between;
+  width: 248px;
+  border: 0.5px solid #dbdbdb;
+  border-radius: 5px;
+  background-color: #ffffff;
+  padding: 19px;
+  position: absolute;
+  top: 78px;
+  display: none;
+  -webkit-box-shadow: -6px 7px 16px -4px rgba(77,77,77,1);
+  -moz-box-shadow: -6px 7px 16px -4px rgba(77,77,77,1);
+  box-shadow: -6px 7px 16px -4px rgba(77,77,77,1);
+}
+
+#cart:checked ~ .cartMenuBox {
+  animation-duration: 0.5s;
+  animation-name: dropDown;
+  display: flex;
+}
+
+.tail1 {
+  width: 0;
+  height: 0;
+  border-style: inset;
+  border-width: 10px 10px 10px 10px;
+  border-color: transparent transparent  #dbdbdb transparent;
+  position: absolute;
+}
+
+.tail2 {
+  width: 0;
+  height: 0;
+  border-style: inset;
+  border-width: 10px 10px 10px 10px;
+  border-color: transparent transparent #ffffff transparent;
+  position: absolute;
+}
+
+.cartTail1 {
+  top: -20px;
+  left: 57px;
+}
+
+.cartTail2 {
+  top: -19px;
+  left: 57px;
+}
+
+.browseTail1 {
+  top: -20px;
+  left: 62px;
+}
+
+.browseTail2 {
+  top: -19px;
+  left: 62px;
+}
+
+.navTail1 {
+  top: -20px;
+  left: 110px;
+}
+
+.navTail2 {
+  top: -19px;
+  left: 110px;
+}
+
+.cartMenu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 110px;
+  border-bottom: 1px solid #ededed;
+  img {
+    width: 72px;
+    height: 85px;
+  }
+  p {
+    font-size: 12px;
+    font-weight: 900;
+    text-transform: uppercase;
+    margin: 0 0 5px 0;
+  }
+  i {
+    color: #e4af48;
+    font-size: 12px;
+  }
+  span {
+    color: @mainColor;
+    font-size: 12px;
+    font-weight: 400;
+    text-transform: uppercase;
+  }
+  a {
+    i  {
+      color: #c0c0c0;
+      font-size: 16px;
+      &:hover {
+        color: @mainColor;
+      }
+    }
+  }
+}
+
+.cartMenuInfo{
+  flex-grow: 1;
+  padding: 15px;
+}
+
+.cartMenuPrice {
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: space-between;
+}
+
+.cartMenuCheckoutButtonBox {
+  min-height: 118px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cartMenuCheckoutButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 50px;
+  border: 1px solid #eaeaea;
+  background-color: #ffffff;
+  color: #4a4a4a;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  &:hover {
+    border: 1px solid @mainColor;
+    color: @mainColor;
+  }
 }
 
 .header-line {
@@ -159,18 +370,17 @@
     margin-top: 0;
     margin-bottom: 0;
   }
-
-  & > .menu-list a {
-    color: #222222;
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 38px;
-  }
-
   & > .menu-list > li:not(:last-child) {
     margin-right: 48px;
   }
+}
+
+.menu-link {
+  color: #222222;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 38px;
 }
 
 .nav .menu-list a:hover {
@@ -182,3 +392,184 @@
   margin-bottom: -3px;
 }
 
+.navMenuBox {
+  width: 770px;
+  height: 300px;
+  border-radius: 5px;
+  border: 0.5px solid #dbdbdb;
+  background-color: #ffffff;
+  background-image: url("../../img/Layer_42.jpg");
+  background-repeat: no-repeat;
+  background-position: right 4% top 92%;
+  background-size: 270px 125px;
+  position: absolute;
+  top: 15.5%;
+  left: 35%;
+  display: none;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: stretch;
+  justify-content: space-between;
+  padding: 20px 10px 0 25px;
+}
+
+.navMenuHeader {
+  width: 215px;
+  color: #232323;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 32px;
+  text-transform: uppercase;
+  letter-spacing: 0.35px;
+  border-bottom: 1px solid #e8e8e8;
+}
+
+.navMenuList {
+  list-style-type: none;
+  margin: 0 0 14px 0;
+  padding: 0;
+  line-height: 20px;
+  a {
+    color: #646464;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0.35px;
+    text-decoration: none;
+  }
+  & :hover {
+    color: @mainColor;
+  }
+}
+
+.navMenuSale {
+  width: 250px;
+  height: 130px;
+  color: #ffffff;
+  font-size: 22px;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 0.55px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  a {
+    margin: 0;
+    line-height: 24px;
+    padding-bottom: 20px;
+    color: white;
+  }
+}
+
+.womenHover:hover .navMenuBox {
+  display: flex;
+}
+
+.nav-checkbox {
+  display: none;
+}
+
+.nav-button {
+  background-color: #fff;
+  color: @mainColor;
+  font-size: 16px;
+  font-weight: 600;
+  border: 1px solid #e8e8e8;
+  width: 130px;
+  height: 38px;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  user-select: none;
+  margin-top: 5px;
+  &:hover {
+    background-color: @mainColor;
+    color: #fff;
+  }
+  &:active {
+    background-color: @mainHoverColor;
+  }
+}
+
+@media (min-width: 1140px) {
+  .container {
+    width: 1140px;
+  }
+  .nav-button {
+    display: none;
+  }
+}
+
+@media (max-width: 1139px) {
+  .container {
+    width: 720px;
+  }
+  .header-search input {
+    width: 189px;
+  }
+  .cartIcon {
+    margin-left: 30px;
+  }
+  .nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .nav .menu-list {
+    display: none;
+    flex-direction: column;
+    padding: 0;
+    background-color: @mainColor;
+    position: absolute;
+    width: 100%;
+    & a:hover {
+      color: #fff;
+    }
+  }
+  .nav-button {
+    display: flex;
+  }
+  input.nav-checkbox:checked+ul {
+    display: flex;
+  }
+  .menu-link {
+    color: #fff;
+    font-size: 16px;
+  }
+  .nav > .menu-list > li:not(:last-child) {
+    margin: 0;
+  }
+  .womenHover:hover .navMenuBox {
+    display: none;
+  }
+  .menu-item {
+    width: inherit;
+    text-align: center;
+    &:hover {
+      background-color: @mainHoverColor;
+      border: none;
+    }
+  }
+}
+
+@media (max-width: 719px) {
+  .container {
+    width: 540px;
+  }
+  .header {
+    flex-direction: column;
+  }
+  .header-left {
+    flex-direction: column;
+    align-items: center;
+  }
+  .header-right {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 539px) {
+  .container {
+    width: 100%;
+  }
+}
