добавила класс корзине и дз про бургер

--- a/styles/less/_checkout.less
+++ b/styles/less/_checkout.less
@@ -1,8 +1,8 @@
-.checkoutContentBox {
+.checkout-content-box {
   margin-bottom: 93px;
 }
 
-.checkoutContent {
+.checkout-content {
   min-height: 72px;
   border-bottom: 1px solid #e8e8e8;
   display: flex;
@@ -28,16 +28,16 @@
   }
 }
 
-.checkoutPage {
+.checkout-page {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding-left: 34px;
 }
 
-.checkoutLeft {
+.checkout-left {
   width: 550px;
-  .checkoutInput {
+  .checkout-input {
     display: flex;
     align-items: center;
     margin-bottom: 16px;
@@ -57,7 +57,7 @@
   }
 }
 
-.checkoutRight {
+.checkout-right {
   width: 550px;
   label {
     font-size: 12px;
@@ -85,7 +85,7 @@
     padding-left: 15px;
     font-size: 16px;
   }
-  .checkoutForgot {
+  .checkout-forgot {
     font-size: 14px;
     font-weight: 600;
     color: #222222;
@@ -95,7 +95,7 @@
   }
 }
 
-.checkoutButton {
+.checkout-button {
   width: 180px;
   height: 50px;
   border: 1px solid #eaeaea;
@@ -152,14 +152,14 @@
   }
 }
 
-.inputHide {
+.input-hide {
   display: none;
 
-  & + label div.contentHide {
+  & + label div.content-hide {
     display: none
   }
 
-  &:checked + label div.contentHide {
+  &:checked + label div.content-hide {
     display: block;
   }
 }
