--- a/styles/less/_shopingCart.less
+++ b/styles/less/_shopingCart.less
@@ -1,11 +1,11 @@
-.newArrivalsBox {
+.new-arrivals-box {
   height: 151px;
   background-color: #f8f3f4;
   display: flex;
   align-items: center;
 }
 
-.newArrivals {
+.new-arrivals {
   display: flex;
   justify-content: space-between;
   h1 {
@@ -20,7 +20,7 @@
   }
 }
 
-.newArrList {
+.new-arr-list {
   list-style-type: none;
   font-size: 14px;
   text-transform: uppercase;
@@ -34,7 +34,7 @@
   }
 }
 
-.newArrListActive {
+.new-arr-list-active {
   font-weight: 700;
   font-size: 14px;
   text-transform: uppercase;
@@ -43,25 +43,25 @@
   }
 }
 
-.prodRow {
+.prod-row {
   display: flex;
   justify-content: space-between;
   align-content: center;
-  .prodDetails {
+  .prod-details {
     flex-grow: 1;
     text-align: left;
   }
-  .prodCell {
+  .prod-cell {
     width: 120px;
     text-align: center;
   }
 }
 
-.prodDetBox {
+.prod-det-box {
   margin-top: 85px;
 }
 
-.prodDet {
+.prod-det {
   font-size: 13px;
   font-weight: 900;
   text-transform: uppercase;
@@ -73,7 +73,7 @@
   }
 }
 
-.prodDetContent {
+.prod-det-content {
   height: 162px;
   display: flex;
   flex-direction: row;
@@ -85,7 +85,7 @@
   padding-top: 20px;
 }
 
-.prodLeft {
+.prod-left {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -124,7 +124,7 @@
   }
 }
 
-.prodLeftDescription {
+.prod-left-description {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -153,12 +153,12 @@
   margin: 0;
 }
 
-.flexCenter {
+.flex-center {
   display: flex;
   justify-content: center;
 }
 
-.prodButton {
+.prod-button {
   display: flex;
   justify-content: space-between;
   button {
@@ -185,13 +185,13 @@
   }
 }
 
-.shippingAdressBox {
+.shipping-adress-box {
   margin-top: 63px;
   margin-bottom: 79px;
   height: 300px;
 }
 
-.shippingAdress {
+.shipping-adress {
   height: 410px;
   margin-top: 63px;
   display: flex;
@@ -213,7 +213,7 @@
   }
 }
 
-.shippingAdress form {
+.shipping-adress form {
   display: flex;
   flex-direction: column;
 }
@@ -240,11 +240,11 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-.whiteButtonBox {
+.white-button-box {
   display: inline-block;
 }
 
-.whiteButton {
+.white-button {
   color: #757575;
   font-size: 11px;
   font-weight: 800;
@@ -267,7 +267,7 @@ input::-webkit-inner-spin-button {
   }
 }
 
-.subTotalBox {
+.sub-total-box {
   width: 360px;
   height: 214px;
   background-color: #f5f3f3;
@@ -275,7 +275,7 @@ input::-webkit-inner-spin-button {
   flex-direction: column;
   justify-content: space-evenly;
   text-align: right;
-  .subTotal {
+  .sub-total {
     color: #4a4a4a;
     font-size: 11px;
     font-weight: 400;
@@ -283,7 +283,7 @@ input::-webkit-inner-spin-button {
     margin-top: 40px;
     margin-right: 41px;
   }
-  .grandTotal {
+  .grand-total {
     font-size: 16px;
     font-weight: 700;
     text-transform: uppercase;
@@ -321,7 +321,7 @@ input::-webkit-inner-spin-button {
   }
 }
 
-.subTotalHr {
+.sub-total-hr {
   width: 275px;
   height: 1px;
   margin: 15px auto;
@@ -329,7 +329,7 @@ input::-webkit-inner-spin-button {
 
 }
 
-.proceedBox {
+.proceed-box {
   display: flex;
   justify-content: center;
   align-content: center;
