--- a/styles/less/_singlePage.less
+++ b/styles/less/_singlePage.less
@@ -1,4 +1,4 @@
-.singlePageSlider {
+.single-page-slider {
   height: 777px;
   border: 1px solid #eaeaea;
   background-color: #f7f7f7;
@@ -10,7 +10,7 @@
   align-items: center;
 }
 
-.singlePageSliderArrow {
+.single-page-slider-arrow {
   width: 50px;
   height: 50px;
   background-color: @mainColor;
@@ -31,13 +31,13 @@
   }
 }
 
-.singlePageInfoBox {
+.single-page-info-box {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.singlePageInfo {
+.single-page-info {
   border: 1px solid #eaeaea;
   margin-top: -80px;
   width: 1141px;
@@ -46,20 +46,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  .singlePageInfoH3 {
+  .single-page-info-h3 {
     color: @mainColor;
     font-size: 14px;
     font-weight: 700;
     text-transform: uppercase;
   }
-  .singlePageInfoH2 {
+  .single-page-info-h2 {
     color: #4d4d4d;
     font-size: 18px;
     font-weight: 600;
     text-transform: uppercase;
     margin-bottom: 67px;
   }
-  .singlePageInfoText {
+  .single-page-info-text {
     color: #5e5e5e;
     font-size: 14px;
     font-weight: 300;
@@ -69,23 +69,23 @@
   }
 }
 
-.singlePageScrollBox {
+.single-page-scroll-box {
   display: flex;
   flex-direction: row;
   align-items: center;
-  .singlePageScroll {
+  .single-page-scroll {
     width: 42px;
     height: 1px;
     background-color: #eaeaea;
   }
-  .singlePageScrollActive {
+  .single-page-scroll-active {
     width: 63px;
     height: 3px;
     background-color: @anothercolor;
   }
 }
 
-.singlePageInfoBorder {
+.single-page-info-border {
   width: 642px;
   height: 400px;
   margin-top: 73px;
@@ -95,10 +95,10 @@
   align-items: center;
 }
 
-.singlePageInfoBox2 {
+.single-page-info-box2 {
   width: 340px;
 
-  .singlePageInfo2 {
+  .single-page-info2 {
     color: #b9b9b9;
     font-size: 14px;
     font-weight: 700;
@@ -112,19 +112,19 @@
   }
 }
 
-.singlePageInfoPrice {
+.single-page-info-price {
   color: @anothercolor;
   font-size: 24px;
   font-weight: 700;
   line-height: 24px;
 }
 
-.singlePageInputs {
+.single-page-inputs {
   margin-top: 63px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  .singlePageInput {
+  .single-page-input {
     display: flex;
     flex-direction: column;
     label {
@@ -145,7 +145,7 @@
   }
 }
 
-.singlePageButton {
+.single-page-button {
   width: 537px;
   height: 55px;
   border: 1px solid @anothercolor;
@@ -163,16 +163,16 @@
   -o-transition: 0.2s linear;
   transition: 0.2s linear;
   &:hover {
-    -webkit-box-shadow: 0px 7px 11px 2px rgb(185, 185, 185);
-    -moz-box-shadow: 0px 7px 11px 2px rgba(185,185,185,1);
-    box-shadow: 0px 7px 11px 2px rgba(185,185,185,1);
+    -webkit-box-shadow: 10px 9px 18px 6px rgba(247,205,228,1);
+    -moz-box-shadow: 10px 9px 18px 6px rgba(247,205,228,1);
+    box-shadow: 10px 9px 18px 6px rgba(247,205,228,1);
     -webkit-transition: 0.2s linear;
     -o-transition: 0.2s linear;
     transition: 0.2s linear;
   }
 }
 
-.singlePageContentBox {
+.single-page-content-box {
   margin-top: 119px;
   margin-bottom: 94px;
   display: flex;
@@ -187,26 +187,26 @@
   }
 }
 
-.singlePageContent {
+.single-page-content {
   margin-top: 72px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  .singlePageContentImg {
+  .single-page-content-img {
     width: 261px;
     height: 280px;
     background-color: #e9e9e9;
     display: flex;
     justify-content: center;
   }
-  .singlePageContentDescription {
+  .single-page-content-description {
     color: #6f6e6e;
     font-size: 14px;
     font-weight: 400;
     text-transform: uppercase;
     margin-left: 15px;
   }
-  .singlePageContentPrice {
+  .single-page-content-price {
     color: @mainColor;
     font-size: 16px;
     font-weight: 700;
@@ -215,7 +215,7 @@
   }
 }
 
-.singleImgHover {
+.single-img-hover {
   width: 261px;
   height: 280px;
   background-color: #3a383899;
@@ -260,14 +260,14 @@
   }
 }
 
-.singlePageContentProduct {
+.single-page-content-product {
   position: relative;
   -webkit-transition: opacity 0.4s linear;
   -o-transition: opacity 0.4s linear;
   transition: opacity 0.4s linear;
 }
 
-.singlePageContentProduct:hover {
+.single-page-content-product:hover {
   -webkit-box-shadow: 7px 9px 5px 0px rgba(189,178,184,1);
   -moz-box-shadow: 7px 9px 5px 0px rgba(189,178,184,1);
   box-shadow: 7px 9px 5px 0px rgba(189,178,184,1);
@@ -276,7 +276,7 @@
   transition: 0.2s linear;
 }
 
-.singlePageContentProduct:hover .singleImgHover {
+.single-page-content-product:hover .single-img-hover {
   opacity: 1;
   -webkit-transition: opacity 0.4s linear;
   -o-transition: opacity 0.4s linear;
